--- a/video.html
+++ b/video.html
@@ -27,9 +27,7 @@
         </div>
         <p></p>
 
-        <video controls>
-            <source src="theway.mp4" type="video/mp4">
-        </video>
+        <iframe src="https://www.youtube.com/embed/fDtz1znyXYQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         
         <script src="app.js"></script>
