--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <div  class="mainpage_txt">
         <h1 style="font-size: 36px;">Welcome to our</h1>
         <h2 style="font-size: 72px;">30 Minute Film Festival: <br> This is the Way!</h2>
-        <p>Film by Zheljko Nenadikj, Mikolaj Debicki, Maryam Khalili, and ...<br> Website by Zheljko Nenadikj</p>
+        <p>Film by Zheljko Nenadikj, Mikolaj Debicki, Maryam Khalili, and Ariya Chaloemtoem
+<br> Website by Zheljko Nenadikj</p>
         </div>
         <!-- Creating the navigation bar -->
         <nav>
