--- a/Assignment2/comic.html
+++ b/Assignment2/comic.html
@@ -21,8 +21,8 @@
             <img id="comic_screen" src="question1.png">
             <img id="start_button" src="start.png">
             <img id="restart_button" src="restart.png">
-            <div id = "choice_1"></div>
-            <div id = "choice_2"></div>            
+            <div id = "choice_1", class = "choice_button"></div>
+            <div id = "choice_2", class = "choice_button"></div>            
         </div>
         <script src="app.js"></script>
     </body>
