--- a/Assignment2Final/index.html
+++ b/Assignment2Final/index.html
@@ -21,6 +21,7 @@
                 
                 
                Presented to you by Zheki, Mikolai and Maryam</p>
+        </div>
         <!-- Making the navbar for swithcing between home and comic pages -->
         <nav>
             <p>Roots</p>
