--- a/Assignment2Final/comic.html
+++ b/Assignment2Final/comic.html
@@ -24,6 +24,6 @@
             <div id = "choice_1", class = "choice_button"></div>
             <div id = "choice_2", class = "choice_button"></div>            
         </div>
-        <script src="app.js"></script>
+        <script defer src="app.js"></script>
     </body>
 </html>
